{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 82,
  "lineage": "6c2fe59c-9e28-bec3-adf9-3be3f46cb8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fd09abd49810b72c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-146-127-39.compute-1.amazonaws.com",
            "public_ip": "54.146.127.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-0a761c8e24c39b845",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a761c8e24c39b845",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0294aca15fa536b0c",
            "private_dns": "ip-172-31-24-168.ec2.internal",
            "private_ip": "172.31.24.168",
            "public_dns": "ec2-52-23-237-201.compute-1.amazonaws.com",
            "public_ip": "52.23.237.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa2c2c756e0e8b4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-mp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-88351cc5",
            "tags": {
              "Name": "webserver0"
            },
            "tags_all": {
              "Name": "webserver0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed8904f22bef18bc"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-030db0ba6697a9b11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030db0ba6697a9b11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc18a92ff718958c",
            "private_dns": "ip-172-31-29-79.ec2.internal",
            "private_ip": "172.31.29.79",
            "public_dns": "ec2-3-87-92-92.compute-1.amazonaws.com",
            "public_ip": "3.87.92.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027b48bc78fa5a18e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-mp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-88351cc5",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed8904f22bef18bc"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-042d6305c4fbeaa57",
            "id": "igw-042d6305c4fbeaa57",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd09abd49810b72c",
            "id": "nat-03bff36b14060669e",
            "network_interface_id": "eni-062dfc3452a59ef05",
            "private_ip": "10.0.4.24",
            "public_ip": "54.146.127.39",
            "subnet_id": "subnet-0d95304d3ec646f0a",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.private_app_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-00a1e15fd7b377bcb",
            "id": "rtb-00a1e15fd7b377bcb",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03bff36b14060669e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.private_app_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0956af03be48bf6b2",
            "route_table_id": "rtb-00a1e15fd7b377bcb",
            "subnet_id": "subnet-0d95304d3ec646f0a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.router",
            "aws_subnet.private_app_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0418aa220b08373c3",
            "route_table_id": "rtb-00a1e15fd7b377bcb",
            "subnet_id": "subnet-0634e5d7fb28b815b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.router",
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-mp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-0ed8904f22bef18bc",
            "description": "acesso-ssh-mp",
            "egress": [],
            "id": "sg-0ed8904f22bef18bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/21"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-mp",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-5d268c20"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0d95304d3ec646f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d95304d3ec646f0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0bf45ca09e5d2dc19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0bf45ca09e5d2dc19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0dae5d79bf4b5f225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0dae5d79bf4b5f225",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0d7aea22cd2db43cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0d7aea22cd2db43cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0634e5d7fb28b815b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0634e5d7fb28b815b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0c66ed21ba0a819c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c66ed21ba0a819c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-08651cdba48f5d451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-08651cdba48f5d451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0851477c18903dc72",
            "default_route_table_id": "rtb-0809f9f8684c32e66",
            "default_security_group_id": "sg-0207931986b001610",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08651cdba48f5d451",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0809f9f8684c32e66",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          }
        }
      ]
    }
  ]
}